# query-doc

./: .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: lint-and-test.yml
.streamlit/: config.toml
src/: main.py  st_ui.py
